[tool.poetry]
name = "garant-park-wallet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "garant_park_wallet"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "2.9.6"
gunicorn = "20.1.0"
environs = {extras = ["django"], version = "^10.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
